--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
-python-multipart==0.0.6
-pydantic[email]==2.5.3
-httpx==0.26.0
+fastapi>=0.115.0
+uvicorn>=0.34.0
+sqlalchemy>=2.0.36
+psycopg2-binary>=2.9.10
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+bcrypt>=4.2.0
+python-multipart>=0.0.18
+pydantic[email]>=2.10.0
+httpx>=0.28.0
+numpy>=1.24.0
+torch>=2.0.0
